syntax = "proto3";

package proto;
option go_package = "./;proto";

import "TowerCurLevelRecord.proto";

message TowerCurLevelRecordChangeNotify {
  enum CmdId {
    option allow_alias = true;
    NONE = 0;
    ENET_CHANNEL_ID = 0;
    ENET_IS_RELIABLE = 1;
    CMD_ID = 2441;
  }

  TowerCurLevelRecord cur_level_record = 10;
}
