syntax = "proto3";

package proto;
option go_package = "./;proto";

import "TowerFloorRecord.proto";

message TowerFloorRecordChangeNotify {
  enum CmdId {
    option allow_alias = true;
    NONE = 0;
    ENET_CHANNEL_ID = 0;
    ENET_IS_RELIABLE = 1;
    CMD_ID = 2431;
  }

  repeated TowerFloorRecord tower_floor_record_list = 9;
  bool is_finished_entrance_floor = 1;
}
