syntax = "proto3";

package proto;
option go_package = "./;proto";


message TowerMonthlyBrief {
  uint32 tower_schedule_id = 4;
  uint32 best_floor_index = 5;
  uint32 best_level_index = 12;
  uint32 total_star_count = 2;
}
